--- a/Excel_WorksheetTools/project.json
+++ b/Excel_WorksheetTools/project.json
@@ -4,10 +4,9 @@
   "description": "Collection of cross-platform tools for work with Excel Worksheet information without using Excel Application Scope and without the need for Office license",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "2.22.2",
     "UiPath.System.Activities": "[23.10.2]",
-    "UiPath.Testing.Activities": "[23.10.0]",
-    "UiPath.UIAutomation.Activities": "[23.10.3]",
-    "UiPath.WebAPI.Activities": "[1.18.0]"
+    "UiPath.UIAutomation.Activities": "[23.10.3]"
   },
   "webServices": [],
   "entitiesStores": [],
